--- a/Sorting/Sorting/MainWindow.xaml
+++ b/Sorting/Sorting/MainWindow.xaml
@@ -13,7 +13,7 @@
                  HorizontalContentAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnCreate" Content="생성" HorizontalAlignment="Left" Margin="185,77,0,0" VerticalAlignment="Top" Width="75" Click="BtnCreate_Click"/>
         <Button x:Name="btnQuad" Content="Quadratic" HorizontalAlignment="Left" Margin="42,123,0,0" VerticalAlignment="Top" Width="75" Click="BtnQuad_Click"/>
-        <Button x:Name="btnNlog" Content="NlogN" HorizontalAlignment="Left" Margin="138,123,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnNlog" Content="NlogN" HorizontalAlignment="Left" Margin="138,123,0,0" VerticalAlignment="Top" Width="75" Click="BtnNlog_Click"/>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="148" Margin="42,163,0,0" VerticalAlignment="Top" Width="218"/>
 
     </Grid>
